[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game_Assets/fire_ball/Bullet_002.png" type="Texture" id=1]
[ext_resource path="res://Game_Assets/fire_ball/Bullet_003.png" type="Texture" id=2]
[ext_resource path="res://Game_Assets/soundsandmusic/sounds/shotgun-firing-4-6746.ogg" type="AudioStream" id=3]
[ext_resource path="res://Game_Assets/fire_ball/Bullet_001.png" type="Texture" id=4]
[ext_resource path="res://Game_Assets/fire_ball/Bullet_004.png" type="Texture" id=5]
[ext_resource path="res://bullet.gd" type="Script" id=6]
[ext_resource path="res://Game_Assets/fire_ball/Bullet_000.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 28.1666 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 64.5 )

[node name="bullet" type="KinematicBody2D"]
rotation = 1.5708
scale = Vector2( 0.6, 0.6 )
collision_layer = 32
collision_mask = 18
script = ExtResource( 6 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.43051e-06, 0 )
rotation = -1.5708
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 3 )
animation = "fire"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.06632e-07, 10.1666 )
shape = SubResource( 1 )

[node name="bullet_area" type="Area2D" parent="."]
position = Vector2( 1.43051e-06, 0 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 32
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet_area"]
position = Vector2( -2.91861e-06, 20.5 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 2.32975, 5.93973 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Sound_fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -2.0
pitch_scale = 0.8

[connection signal="body_entered" from="bullet_area" to="." method="_on_bullet_area_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
